--- a/wnr/style.css
+++ b/wnr/style.css
@@ -1,16 +1,16 @@
 :root {
-    --color-primary: #01360d ;
-    --color-primary-light:hsl(242, 91%, 69%, 18%);
-    --color-red : #da0f3f;
-    --color-red-light:hsl(346, 87%, 46%, 15%);
-    --color-green:#00c476;
-    --color-green-light: hsl(156, 100%, 38%, 15%);
-    --color-gray-900:#2b5f41;
-    --color-gray-700:#2d2b7c;
-    --color-grayy-300: rgba(242, 242, 254, 0.3);
-    --color-gray-200:rgba(242, 242, 254, 0.7);
-    --color-white:#f2f2fe;
-    --color-bg: white ;
+    --color-primary: #5f4f30; 
+    --color-primary-light:#aa9787; 
+    --color-red: #da0f3f; /
+    --color-red-light: hsl(346, 87%, 46%, 15%); 
+    --color-green: #808000; 
+    --color-green-light: hsl(82, 50%, 38%, 15%); 
+    --color-gray-900: #6b705c; 
+    --color-gray-700: #695e66; 
+    --color-gray-300: rgba(240, 230, 140, 0.3); 
+    --color-gray-200: rgba(240, 230, 140, 0.7); 
+    --color-white: #484869; 
+    --color-bg: #705947; 
 
     --transition: all 300ms ease ;
 
@@ -51,6 +51,7 @@ body {
     width: var(--container-width-lg);
     max-width: 1800px;
     margin-inline: auto;
+   
 }
 
 section {
@@ -105,7 +106,7 @@ img {
 
 /*================================================================NAV================================================*/
 nav{
-    background: var(--color-primary);
+    background: var(--color-bg);
     width: 100vw;
     height: 4.5rem;
     position: fixed;
@@ -134,11 +135,11 @@ nav button {
 }
 
 .nav_logo {
-    width: 100px;
+    width: 50px;
     align-items: center;
     position: absolute;
-    margin-left: 20px;
-    left: 10px;
+    margin-left: 40px;
+    left: 2dvh;
     
 }
 
@@ -149,10 +150,10 @@ nav button {
 }
  
 .nav_items li a{
-    color: whitesmoke;
+    color: var(--color-primary-light);
     width: 2px;
     height: 7px;
-    text-decoration: #2b5f41;
+    text-decoration: var(--color-primary-light);
 }
 
 .nav_profile {
@@ -236,6 +237,7 @@ nav button {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 4rem;
+    background-color: var(--color-bg);
 }
 
 .featured .post_thumbnail {
@@ -380,11 +382,11 @@ footer ul a:hover {
     display: inline-block;
     width: fit-content;
     padding: 0.6rem 1.2rem;
-    background-color:gold;
+    background-color:rgb(65, 58, 19);
     border-radius: var(--card-border-radius-2);
     cursor: pointer;
     transition: var(--transition);
-    color:  black;
+    color:  rgb(247, 242, 242);
 }
 
 .btn.sm {
@@ -395,12 +397,12 @@ footer ul a:hover {
 
 .btn.danger {
     background: rgba(107, 0, 0, 0.993);
-    color: gold;
+    color: rgb(32, 28, 2);
 }
 
 .btn:hover {
     background: black;
-    color: gold;
+    color: rgb(245, 244, 236);
 }
 /*=============SINGLE POST ============*/
 
@@ -445,7 +447,7 @@ footer ul a:hover {
     display: grid;
     place-items: center;
     height: 100vh;
-    background:#2b5f41;
+    background:var(--color-primary-light);
 }
 
 .form_section-container {
@@ -464,7 +466,6 @@ footer ul a:hover {
 }
 
 .alert_message.success {
-    background: rgb(44, 182, 44);
     color: white;
 }
 
