--- a/wnr/style.css
+++ b/wnr/style.css
@@ -1,7 +1,7 @@
 :root {
     --color-primary: #5f4f30; 
     --color-primary-light:#aa9787; 
-    --color-red: #da0f3f; /
+    --color-red: #da0f3f;
     --color-red-light: hsl(346, 87%, 46%, 15%); 
     --color-green: #808000; 
     --color-green-light: hsl(82, 50%, 38%, 15%); 
@@ -49,51 +49,31 @@ body {
 
 .container {
     width: var(--container-width-lg);
-    max-width: 1800px;
-    margin-inline: auto;
-   
+    max-width: 180px;
+    margin: auto;
 }
 
-section {
-    margin-top: 3rem;
-    width: 100vw;
+.single-box {
+    text-align: center;
+    margin-bottom: 50px; 
 }
 
-h1, h2, h3, h4, h5{
-    line-height: 1.3;
+.img-area {
+    display: flex; 
+    justify-content: center; 
+    margin-bottom: 10px; 
+    margin: 0 10px;
 }
-
-h1 {
-    font-size: 3rem;
-    margin: 1rem 0;
-}
-
-h2 {
-    font-size: 1.7rem;
-    margin: 1rem 0;
-}
-
-h3{
-    font-size: 1.1rem;
-    image-rendering: 0.8rem 0 0.5rem;
-}
-
-h4 {
-    font-size: 1rem;
-    color: gold;
-}
-
-a {
-    color: black;
-    transition: var(--transition);
+.img-area img {
+    width: 80%; 
+    height: auto;
+    border-radius: 10px; 
 }
 
 img {
     display: block;
-    width: 100%;
-    object-fit: cover;
+    object-fit: cover; 
 }
-
 .post_body {
     color: black;
 }
@@ -101,7 +81,6 @@ img {
 .post_author-info {
     color: black;
 }
-
 
 
 /*================================================================NAV================================================*/
